<resources>
    <string name="app_name">Qedron gateway</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_contacts">Recipients</string>

    <!-- Preference Titles -->
    <string name="frequency_header">Frequency</string>
    <string name="max_header">Max messages</string>
    <string name="error_header">Errors</string>
    <string name="contacts_header">Contacts</string>
    <string name="database_header">Database</string>

    <!-- Messages Preferences -->
    <string name="frequency_title">Hot contact duration</string>
    <string name="delay_title">Broadcast gap between messages</string>
    <string name="delay_on_error_title">Pause broadcast time after error</string>

    <!-- error limit -->
    <string name="error_limit_title">Generic error limit to abort broadcasting</string>

    <!-- Abort Preferences -->
    <string name="abort_title">Abort broadcast on error</string>
    <string name="abort_summary_on">Broadcast will be aborted, as soon as an error is encountered.</string>
    <string name="abort_summary_off">Broadcast will resume after user set delay when an error is encountered</string>


    <!-- Bulk Preferences -->
    <string name="bulk_title">Maximum allowed messages per broadcast</string>

    <!-- Max Preferences -->
    <string name="max_title">Lifetime sms message per person</string>

    <!-- Limit Preferences -->
    <string name="limit_title">Limit lifetime messages per person</string>
    <string name="limit_summary_on">A person is excluded from broadcast list after a contact has received a maximum sms messages
    </string>
    <string name="limit_summary_off">The number of sms messages a contact receives is unrestricted</string>

<!--    seed Preference-->
    <string name="seed_title">Seed test contacts</string>
    <string name="seed_summary">Contacts generated will be used for testing purposes</string>

    <!-- prefix Preferences -->
    <string name="prefix_title">Phone number Prefix</string>
    <string name="prefix_summary">Prefix for test contacts phone number</string>

    <!-- Live Preferences -->
    <string name="live_title">Live mode</string>
    <string name="live_summary_off">Broadcast messages are sent to test contacts. The sms will fail as the numbers are fake and are used for testing purposes.</string>
    <string name="live_summary_on">Broadcast messages are sent to your actual contacts. Make sure you everything is correct. If you wan to test the app, switch to test mode.</string>

    <!-- Contacts Preferences -->
    <string name="remove_title">Remove contacts list</string>
    <string name="remove_summary">Clear some of your contact list if your imported data is bad, corrupted or before importing a fresh list of contacts.</string>

    <!-- Database Import Preferences -->
    <string name="backup_title">Backup database</string>
    <string name="backup_summary">Save your data in case the data is corrupted, app crashes or is uninstalled to "…/Documents/Qedron gateway/gatewayDB.sqlite3" </string>

    <!-- Database restore Preferences -->
    <string name="restore_title">Restore database</string>
    <string name="restore_summary">Import data from previous backups under "…/Documents/Qedron gateway/gatewayDB.sqlite3"</string>

    <string name="abort">Abort</string>
    <string name="contacts_available">%1$d/%2$d contacts available for broadcast</string>
    <string name="fetching_result">fetching result…</string>
    <string name="preparing_for_broadcast">preparing for broadcast…</string>
    <string name="broadcast_sent_to_available_contacts">Broadcast %1$s after sending to %2$d/%3$d available contacts</string>
    <string name="done">Done</string>
    <string name="contacts">%1$d contacts</string>
    <string name="qedron_android_sms">qedron android SMS</string>
    <string name="gateway">Gateway</string>
    <string name="no_contacts">No contacts</string>
    <string name="cloud_service">CLOUD SERVICE</string>
    <string name="token">Token</string>
    <string name="local_service">LOCAL SERVICE</string>
    <string name="enable_local_service">Enable local service</string>
    <string name="broadcast">broadcast</string>
    <string name="endpoints">Endpoints</string>
    <string name="loading">Loading…</string>
    <string name="type_your_announcement_or_promo">Type your announcement or promo</string>
    <string name="loading_contacts">loading available contacts for broadcast…</string>
    <string name="completed_icon">Completed icon</string>
    <string name="broadcast_message">Broadcast message</string>
    <string name="send_sms_message_description">Send sms message for all your contacts saved on the app database. Make sure your phone has enough credit to send mass messages.</string>
    <string name="one_moment">one moment…</string>
    <string name="import_contacts">import contacts</string>

    <string name="dialog_question_description">የንግግር:መግለጫ</string>
    <string name="dialog_input">የንግግር:ገቢ፡ጽሁፍ</string>
    <string name="dialog_question_title">የንግግር:ርዕስ</string>
    <string name="dialog_action_negative">ሰርዝ</string>
    <string name="dialog_action_positive">ቀጥል</string>
    <string name="dialog_go_to_settings">ወደ፡ማቀናበሪያ፡ሂድ</string>
    <string name="dialog_grant_tether_perm">ለቴዘር፡ፍቃድ፡ይስጡ</string>
    <string name="dialog_locationShareDescription">ተሽከርካሪዎ፡ከእርስዎ፡ያለውን፡ርቀት፡መጠበቁን፡ለማወቅ፡የአካባቢ፡ማጋራት፡ያስፈልጋል።</string>
    <string name="dialog_locationShareTitle">አካባቢዎን፡ያጋሩ</string>
    <string name="dialog_reset">delete</string>
    <string name="dialog_reset_desc">This process cannot be reversed. You will loose all contacts under the selected tags that you have previously imported</string>
    <string name="dialog_reset_title">Are you sure?</string>
    <string name="dialog_take_me_back">go back</string>
    <string name="dialog_delete_account">ደምስስ</string>
    <string name="dialog_delete_account_desc">ይህ፡የሚቀለበስ፡ድርጊት፡አይደለም።መለያዎ፡ለዘለዓለም፡ይሰረዛል።እርግጠኛ፡ይሁኑ።በጥንቃቄ፡ይቀጥሉ!</string>
    <string name="dialog_delete_account_title">መለያዎን፡ለመደምሰስ፡እንደሚፈልጉ፡እርግጠኛ፡ነዎት?</string>
    <string name="dialog_delete_account_take_me_back">ይቅርብኝ</string>
    <string name="dialog_action_isolate">ነጥል</string>

    <string name="dialog_import_title">Import contacts</string>
    <string name="dialog_import_desc">Add contacts from a fresh CSV file. The expected columns are&lt;br/&gt;
        &lt;br/&gt;
        - &lt;font color="#FDD835"&gt;&lt;b&gt;phone&lt;/b&gt;&lt;/font&gt;&#160;&#160;&#160;&#160;&#160;is required, include country code with no trailing 0s&lt;br/&gt;
        - &lt;font color="#FDD835"&gt;&lt;b&gt;name&lt;/b&gt;&lt;/font&gt;&#160;&#160;&#160;&#160;&#160;&#160;optional&lt;br/&gt;
        - &lt;font color="#FDD835"&gt;&lt;b&gt;details&lt;/b&gt;&lt;/font&gt;&#160;&#160;&#160;optional&lt;br/&gt;
        - &lt;font color="#FDD835"&gt;&lt;b&gt;tag&lt;/b&gt;&lt;/font&gt;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;optional&lt;br/&gt;
        - &lt;font color="#FDD835"&gt;&lt;b&gt;rank&lt;/b&gt;&lt;/font&gt;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;optional&lt;br/&gt;
        &lt;br/&gt;
        in order to help with SMS campaign segmentation.</string>
    <string name="dialog_import_file">Import</string>
    <string name="dialog_import_cancel">Cancel</string>
    <string name="dialog_import_restore">Restore</string>

    <string name="dialog_restore_title">Database found on device</string>
    <string name="dialog_restore_desc">Backup file has been detected on this device. You can automatically restore data from the database found on the default backup location.</string>
    <string name="dialog_restore_cancel">Cancel</string>
    <string name="dialog_restore">Restore</string>
    <string name="search_contacts">Search contacts</string>
    <string name="toggle_active_block_state">toggle active/block state</string>
    <string name="no_contacts_found">no contacts found</string>

    <string name="day">%1$s ቀን</string>
    <string name="days">%1$s ቀናት</string>
    <string name="hr">%1$s ሰዓት</string>
    <string name="hrs">%1$s ሰዓታት</string>
    <string name="min">%1$s ደቂቃ</string>
    <string name="mins">%1$s ደቂቃዎች</string>
    <string name="sec">%1$s ሰከንድ</string>
    <string name="secs">%1$s ሰከንዶች</string>
    <string name="ago">%1$s በፊት</string>
    <string name="years">%1$s ዓመት</string>
    <string name="months">%1$s ወር</string>
    <string name="weeks">%1$s ሳምንት</string>
    <string name="hours">%1$s ሰዓት</string>
    <string name="minutes">%1$s ደቂቃ</string>
    <string name="seconds">%1$s ሰከንድ</string>
    <string name="billions">%1$s bl</string>
    <string name="millions">%1$s ml</string>
    <string name="thousand">%1$s k</string>
    <string name="sort_by">Sort by</string>
    <string name="order_by">Order by</string>
    <string name="by_tag">by tag</string>
    <string name="by_name">by name</string>
    <string name="by_status">by status</string>
    <string name="by_ranking">by ranking</string>
    <string name="by_details">by details</string>
    <string name="by_phone_number">by phone number</string>
    <string name="by_message_count">by message count</string>
    <string name="by_last_contact_date">by last contact date</string>
    <string name="duration">Total broadcast window %1$s</string>
    <string name="campaign_end">Before</string>
    <string name="campaign_start">After</string>
    <string name="campaign_window">Campaign window 00:00</string>
    <string name="hr_separator">:</string>
    <string name="mode">mode</string>
    <string name="live">LIVE</string>
    <string name="test">TEST</string>
    <string name="message_with_date">%1$s\n\n%2$s</string>
    <string name="unknown_date">unknown date</string>
    <string name="tag">🏷️ %1$s</string>
    <string name="do_it_for_all">Do it for all</string>
    <string name="custom_tag">Custom tag</string>
    <string name="ranking">Ranking</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="existing_contacts_found_while_importing_the_new_contacts">Existing contacts found while importing the new contacts. Choose options for handling conflicts below. Toggle the fields which you want to be replaced with the new data provided that the value is not empty. Tags will be merged or you can provide a custom tag below.</string>
    <string name="conflict_found_while_importing">Conflict found while importing</string>
    <string name="select_tags">Select tags</string>
    <string name="all_tags">all tags</string>
    <string name="full_range">full range</string>
    <string name="broadcast_not_allowed_at_this_hour_go_to_settings">Broadcast not allowed at this hour. Go to settings</string>
    <string name="no_available_contacts_go_to_settings">No available contacts. Go to settings</string>
    <string name="message_cannot_be_empty">Message cannot be empty.</string>
</resources>