<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/frequency_header">

        <ListPreference
            app:defaultValue="7"
            app:entries="@array/frequency_entries"
            app:entryValues="@array/frequency_values"
            app:key="frequency"
            app:title="@string/frequency_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/max_header">

        <ListPreference
            app:defaultValue="1000"
            app:key="bulk"
            app:title="@string/bulk_title"
            app:entries="@array/bulk_entries"
            app:entryValues="@array/bulk_values"
            app:useSimpleSummaryProvider="true"/>

        <SwitchPreferenceCompat
            app:key="limit"
            app:defaultValue="false"
            app:title="@string/limit_title"
            app:summaryOff="@string/limit_summary_off"
            app:summaryOn="@string/limit_summary_on"/>

        <ListPreference
            app:defaultValue="100"
            app:dependency="limit"
            app:key="max"
            app:title="@string/max_title"
            app:entries="@array/max_entries"
            app:entryValues="@array/max_values"
            app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/data_header">

        <Preference
            app:key="reset"
            app:title="@string/reset_title"
            app:summary="@string/reset_summary" />

    </PreferenceCategory>

</PreferenceScreen>