<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="56dp"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingStart="12dp"
    android:paddingEnd="24dp"
    android:fitsSystemWindows="true"
    android:animateLayoutChanges="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/controllerScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:minHeight="56dp"
            android:paddingTop="12dp"
            android:paddingBottom="24dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp">

            <View
                android:id="@+id/handle"
                android:layout_width="48dp"
                android:layout_height="4dp"
                android:background="@drawable/handle"
                android:alpha="0.4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/handle">

                <TextView
                    android:id="@+id/dialogTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:text="@string/broadcast_message"
                    android:textColor="@color/colorTextOnSurface"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/modeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/mode"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:paddingStart="12dp"
                    android:paddingEnd="12dp"
                    android:textAllCaps="true"
                    android:textStyle="bold"/>

            </LinearLayout>


            <TextView
                android:id="@+id/dialogDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:text="@string/send_sms_message_description"
                android:textColor="@color/colorTextOnSurfaceAlpha"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogTitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:id="@+id/tagsBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_tags"
                    android:layout_gravity="start"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/colorTextOnSurfaceAlpha"
                    android:textAllCaps="false"
                    android:layout_marginEnd="24dp"
                    app:icon="@drawable/ic_label_important_outline_24"
                    app:iconGravity="textStart"
                    app:iconTint="@color/colorTextOnSurfaceAlpha"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

                <Button
                    android:id="@+id/rangeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_range"
                    android:gravity="start|center_vertical"
                    android:textColor="@color/colorTextOnSurfaceAlpha"
                    android:textAllCaps="false"
                    app:icon="@drawable/ic_range_24"
                    app:iconTint="@color/colorTextOnSurfaceAlpha"
                    app:iconGravity="textStart"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

            </LinearLayout>

            <TextView
                android:id="@+id/dialogContactCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading_contacts"
                android:textColor="@color/colorSuccess"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogDescription" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialogInput"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_your_announcement_or_promo"
                android:layout_marginTop="12dp"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogContactCount">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="textMultiLine"
                    android:maxLines="100"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/dialogLayoutProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:fitsSystemWindows="true"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogInput">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_marginEnd="12dp"
                    android:layout_width="45dp"
                    android:layout_height="45dp" />

                <TextView
                    android:id="@+id/dialogProgressMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/one_moment"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="12dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/dialogSuccessMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fetching_result"
                android:layout_gravity="center_vertical"
                android:gravity="start|center"
                android:textColor="@color/colorSuccess"
                app:drawableStartCompat="@drawable/ic_check_circle_24"
                android:drawablePadding="12dp"
                app:drawableTint="@color/colorSuccess"
                android:layout_margin="12dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogLayoutProgress"/>

            <LinearLayout
                android:id="@+id/layoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginTop="24dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:orientation="horizontal"
                android:fitsSystemWindows="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dialogDescription">

                <Button
                    android:id="@+id/buttonCancel"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:backgroundTint="@color/colorButton"
                    android:textColor="@color/colorTextOnPrimary"
                    android:text="@string/abort"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/buttonGo"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:backgroundTint="@color/colorAccent"
                    android:visibility="gone"
                    android:textColor="@color/colorTextOnPrimary"
                    android:text="@string/broadcast"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>